biscuit-terminal/lib/tests/snapshots/layout_matrix__TwoColumn__left_margin_4.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
    Left column content.                   Right column content.
---
TREE
    Left column content.                   Right column content.
