biscuit-terminal/lib/tests/snapshots/layout_matrix__TwoColumn__max_width_40.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
assertion_line: 87
expression: block
---
VIA_RENDER
Left column          Right column       
content.             content.
---
TREE
Left column          Right column       
content.             content.
