biscuit-terminal/lib/tests/snapshots/layout_matrix__TwoColumn__width_120.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
BESPOKE
Left column content.                                         Right column content.
---
TREE
Left column content.                                         Right column content.
