biscuit-terminal/lib/tests/snapshots/layout_matrix__TwoColumn__width_40.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
BESPOKE
Left column          Right column       
content.             content.
---
TREE
Left column          Right column       
content.             content.
