biscuit-terminal/lib/tests/snapshots/layout_matrix__TwoColumn__width_auto_fill.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
Left column content.                     Right column content.
---
VIA_TREE_DIRECT
Left column content.                     Right column content.
